static/css/localstyle.css
.make-buy{

}

.no-data{

}

.confirm-btn{

}

.total-cost{
    margin-bottom: 0px;
    margin-top: 0px;
    margin-right: 5px;
}

.total-items{
    margin-bottom: 0px;
    margin-top: 0px;
    margin-right: 5px;
}

